<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with <xliff:g id="application_name" example="Bluetooth">%s</xliff:g></string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="app_name">SE文件浏览器</string>
    <string name="confirm">确定</string>
    <string name="menu_item_search">搜索</string>
    <string name="operation_create_folder">文件夹名称</string>
    <string name="menu_item_sort">排序</string>
    <string name="menu_item_sort_name">按名称排序</string>
    <string name="menu_item_sort_size">按大小排序</string>
    <string name="menu_item_sort_date">按时间排序</string>
    <string name="menu_item_sort_type">按类型排序</string>
    <string name="operation_favorite">添加星标</string>
    <string name="operation_unfavorite">取消星标</string>
    <string name="operation_copy">复制</string>
    <string name="operation_copy_path">复制路径</string>
    <string name="operation_paste">粘贴到...</string>
    <string name="operation_move">剪切</string>
    <string name="operation_send">发送</string>
    <string name="operation_rename">重命名</string>
    <string name="operation_compress">压缩</string>
    <string name="operation_delete">删除</string>
    <string name="operation_info">详情</string>
    <string name="operation_cancel">取消</string>
    <string name="operation_refresh">刷新</string>
    <string name="operation_search">搜索</string>
    <string name="operation_selectall">全选</string>
    <string name="operation_cancel_selectall">取消全选</string>
    <string name="operation_show_sys">显示点文件和隐藏文件</string>
    <string name="operation_hide_sys">隐藏点文件和隐藏文件</string>
    <string name="cancel">取消</string>
    <string name="no_file">没有文件</string>
    <string name="tab_category">分类浏览</string>
    <string name="tab_sd">文件管理</string>
    <string name="tab_remote">远程管理</string>
    <string name="sd_folder">SD卡</string>
    <string name="category_all">所有</string>
    <string name="category_music">音乐</string>
    <string name="category_video">视频</string>
    <string name="category_picture">图片</string>
    <string name="category_theme">主题</string>
    <string name="category_document">文档</string>
    <string name="category_zip">压缩包</string>
    <string name="category_apk">安装包</string>
    <string name="category_other">其它</string>
    <string name="category_favorite">收藏夹</string>
    <string name="operation_rename_message">请输入新名称</string>
    <string name="operation_create_folder_message">请输入文件夹名称</string>
    <string name="operation_delete_confirm_message">要删除所选内容吗?</string>
    <string name="new_folder_name">新建</string>
    <string name="new_folder_name_edit">新建文件夹</string>
    <string name="new_file_name">新建文件</string>
    <string name="new_photo_name">照片</string>
    <string name="error_file_name">文件名不能包含以下字符:/*?&lt;>|</string>
    <string name="sd_card_size">SD卡:%1$s</string>
    <string name="sd_card_available">可用:%1$s</string>
    <string name="file_info_location">位置:</string>
    <string name="file_info_size">大小:</string>
    <string name="file_info_modified">时间:</string>
    <string name="file_info_canread">可读:</string>
    <string name="file_info_canwrite">可写:</string>
    <string name="file_info_ishidden">隐藏:</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="operation_deleting">正在删除...</string>
    <string name="operation_pasting">正在复制...</string>
    <string name="operation_moving">正在移动...</string>
    <string name="confirm_know">知道了</string>
    <string name="install_successful">安装成功</string>
    <string name="install_failed">安装失败</string>
    <string name="error_info_cant_send_folder">不能发送文件夹</string>
    <string name="added_favorite">已加入收藏夹</string>
    <string name="removed_favorite">已从收藏夹移除</string>
    <string name="create_folder_success">创建成功</string>
    <string name="create_folder_fail">创建失败</string>
    <string name="fail_to_create_folder">创建文件夹失败。</string>
    <string name="fail_to_create_exist_folder">创建文件夹失败，文件夹已存在。</string>
    <string name="fail_to_rename">重命名失败，可能使用该名称的文件或文件夹已存在。</string>
    <string name="enable_sd_card">无可用SD卡</string>
    <string name="start_server">启动服务</string>
    <string name="stop_server">停止服务</string>
    <string name="notif_server_starting">远程管理服务已启动</string>
    <string name="notif_title">远程管理服务正在运行</string>
    <string name="storage_warning">外部存储不可用.</string>
    <string name="wifi_state">WiFi状态</string>
    <string name="instruction_pre">启动后可以从电脑端远程管理手机文件</string>
    <string name="instruction">请在“我的电脑”地址栏中输入：</string>
    <string name="no_wifi">无WiFi网络</string>
    <string name="no_wifi_hint">无WiFi网络,点击以查看WiFi设置</string>
    <string name="search_title">搜索文件</string>
    <string name="search_hint">搜索字词</string>
    <string name="file_size">%d 字节</string>
    <string name="dialog_select_type">选择文件类型</string>
    <string name="dialog_type_text">文本</string>
    <string name="dialog_type_audio">音频</string>
    <string name="dialog_type_video">视频</string>
    <string name="dialog_type_image">图像</string>
    <string name="favorite_photo">照片</string>
    <string name="favorite_sdcard">SD卡</string>
    <string name="favorite_root">根目录</string>
    <string name="favorite_screen_cap" />
    <string name="favorite_ringtone">铃声</string>
    <string name="multi_select_title">已选择 %1$s 个</string>
    <string name="menu_setting">设置</string>
    <string name="menu_about">关于</string>
    <string name="menu_exit">退出</string>
    <string name="preference_title">常规设置</string>
    <string name="pref_primary_folder">主页文件夹</string>
    <string name="pref_read_root">读取根目录</string>
    <string name="pref_show_real_path">显示真实路径</string>
    <string name="pref_primary_folder_summary">程序启动时显示的文件夹，当前路径为%1$s</string>
    <string name="pref_show_real_path_summary">在导航栏中显示真实路径</string>
    <string name="default_primary_folder">/mnt/sdcard</string>
    <string name="main_title">文件管理</string>
    <string name="sort">排序</string>
    <string name="create">新建...</string>
    <string name="search">搜索</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="refresh">刷新</string>
    <string name="exit">退出</string>
    <string name="sort_by_name">按名字排序</string>
    <string name="sort_by_time">按时间排序</string>
    <string name="sort_by_size">按大小排序</string>
    <string name="sort_by_type">按类型排序</string>
    <string name="select_all">全选</string>
    <string name="deselect_all">取消全选</string>
    <string name="cancle">取消</string>
    <string name="delete">删除</string>
    <string name="copy">复制</string>
    <string name="cut">剪切</string>
    <string name="paste">粘贴</string>
    <string name="share">分享</string>
    <string name="favorite">收藏</string>
    <string name="rename">重命名</string>
    <string name="detail">详情</string>
    <string name="compress">压缩</string>
    <string name="create_folder">文件夹</string>
    <string name="create_file">文件</string>
    <string name="create_photo">拍照</string>
    <string name="create_folder_name">文件夹名称</string>
    <string name="create_file_name">文件名称</string>
    <string name="create_photo_name">照片名称</string>
    <string name="my_device">我的设备</string>
    <string name="star">已加星标</string>
    <string name="wifi">Wi-Fi远程管理</string>
    <string name="category">分类查看</string>
    <string name="music">音乐</string>
    <string name="video">视频</string>
    <string name="image">图片</string>
    <string name="document">文档</string>
    <string name="zip">压缩包</string>
    <string name="apk">安装包</string>
    <string name="file_num">%1$s个文件</string>
    <string name="root_name">根目录</string>
    <string name="start_wifi_label">启动远程Ftp服务</string>
    <string name="switch_on">开启</string>
    <string name="switch_off">关闭</string>
    <string name="can_manager_files">启动后可以从电脑端远程管理手机文件。</string>
    <string name="need_wifi">远程服务需要Wi-Fi网络</string>
    <string name="input_ip_label">请在“我的电脑”地址栏输入：</string>
    <string name="filter_label">过滤条件</string>
    <string name="no_voice_search">您的设备未安装语音搜索，请先到市场下载安装。</string>
    <string name="search_info">输入搜索字词</string>
    <string name="decompress1">解压到当前目录</string>
    <string name="decompress2">解压到...</string>
    <string name="compress_title">压缩到</string>
    <string name="operation_ziping">正在压缩...</string>
    <string name="operation_unziping">正在解压...</string>
    <string name="about_us">关于我们</string>
    <string name="recommend">推荐应用</string>
    <string name="check_version">检查新版本</string>
    <string name="version">Version %1$s</string>
    <string name="developer">By 联图</string>
    <string name="www"> liantu.com</string>
    <string name="other">其他</string>
    <string name="rate_label">做的不错，去评价一个</string>
    <string name="share_label">分享应用给好友</string>
    <string name="feekback_label">发邮件反馈问题</string>
    <string name="version_label">关于我们</string>
    <string name="default_path_label">默认打开路径</string>
    <string name="show_hide_label">显示隐藏文件</string>
    <string name="show_hide_info">显示点文件和隐藏文件</string>
    <string name="view_mode_label">选择查看方式</string>
    <string name="view_mode_info1">单列模式</string>
    <string name="view_mode_info2">双列模式</string>
    <string name="feekback_subject">文件管理 问题反馈</string>
    <string name="share_subject">文件管理</string>
    <string name="no_way_to_share">没有应用可以执行该操作</string>
    <string name="no_way_to_email">没有应用可以发送邮件</string>
    <string name="share_title">通过以下方式分享</string>
    <string name="share_text">安卓手机必备文件管理工具 SE文件浏览</string>
    <string name="finish_download">文件下载完成</string>
    <string name="download_faile">下载失败</string>
    <string name="ticker_text">文件管理正在更新</string>
    <string name="notify_title">文件管理</string>
    <string name="notify_retry">下载失败，点击重试。</string>
    <string name="my_email">1172069959@qq.com</string>
    <string name="notify_install">下载完成，点击安装程序。</string>
    <string name="newest_version">已经是最新版本</string>
    <string name="update_info">发现新版本，是否现在升级？</string>
    <string name="update">马上升级</string>
    <string name="update_next_time">以后再说</string>
    <string name="check_version_faile">版本检测失败</string>
    <string name="not_network">网络连接不可用</string>
    <string name="exit_info">再按一次退出程序</string>
    <string name="QRcode_Scan">二维码扫描</string>
    <string name="WallpaperHD">高清壁纸</string>
    <string name="Super_Compass">终极指南针</string>
    <string name="Ringtones">手机铃声</string>
    <string name="notif_text">远程管理服务正在运行   %1$s</string>
    <string name="about_dlg_title">关于 SE文件管理器</string>
    <string name="about_dlg_message"><b>简介：</b> 关于 SE文件管理器(SE) 允许在您的 Android设备上进行文件操作。\n\n\        <b>维护：</b> YangSmith (hzyangsmith@gmail.com)\n\n        <b>编译：</b> YangSmith (hzyangsmith@gmail.com)\n\n        <b>美工：</b> 小燕\n\n</string>
</resources>