<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbarThumbVertical="@drawable/scrollbar_handle" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="30.0dip"
                android:gravity="bottom"
                android:paddingBottom="4.0dip"
                android:paddingLeft="6.0dip"
                android:text="@string/setting"
                android:textColor="#ff555555"
                android:textSize="14.0sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2.0dip"
                android:background="#ffa1a1a1" />

            <LinearLayout
                android:id="@+id/default_path_line"
                android:layout_width="fill_parent"
                android:layout_height="64.0dip"
                android:background="@drawable/setting_item_selecter"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="6.0dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_path_label"
                    android:textColor="#ff222222"
                    android:textSize="18.0sp" />

                <TextView
                    android:id="@+id/default_path"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="根目录"
                    android:textColor="#ff777777"
                    android:textSize="16.0sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="#ffcbcbcb" />

            <RelativeLayout
                android:id="@+id/showhide_line"
                android:layout_width="fill_parent"
                android:layout_height="64.0dip"
                android:background="@drawable/setting_item_selecter"
                android:clickable="true" >

                <CheckBox
                    android:id="@+id/checkBox_showhide"
                    style="@style/MyCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8.0dip"
                    android:clickable="false"
                    android:duplicateParentState="true" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_toLeftOf="@id/checkBox_showhide"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="5.0dip" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_hide_label"
                        android:textColor="#ff222222"
                        android:textSize="18.0sp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_hide_info"
                        android:textColor="#ff777777"
                        android:textSize="16.0sp" />
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="#ffcbcbcb" />

            <LinearLayout
                android:id="@+id/view_mode_line"
                android:layout_width="fill_parent"
                android:layout_height="64.0dip"
                android:background="@drawable/setting_item_selecter"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="6.0dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_mode_label"
                    android:textColor="#ff222222"
                    android:textSize="18.0sp" />

                <TextView
                    android:id="@+id/view_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_mode_info1"
                    android:textColor="#ff777777"
                    android:textSize="16.0sp" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="30.0dip"
                android:gravity="bottom"
                android:paddingBottom="4.0dip"
                android:paddingLeft="6.0dip"
                android:text="@string/other"
                android:textColor="#ff555555"
                android:textSize="14.0sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2.0dip"
                android:background="#ffa1a1a1" />

            <TextView
                android:id="@+id/rate"
                android:layout_width="fill_parent"
                android:layout_height="47.0dip"
                android:background="@drawable/setting_item_selecter"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="6.0dip"
                android:text="@string/rate_label"
                android:textColor="#ff222222"
                android:textSize="18.0sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="#ffcbcbcb" />

            <TextView
                android:id="@+id/share"
                android:layout_width="fill_parent"
                android:layout_height="47.0dip"
                android:background="@drawable/setting_item_selecter"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="6.0dip"
                android:text="@string/share_label"
                android:textColor="#ff222222"
                android:textSize="18.0sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="#ffcbcbcb" />

            <TextView
                android:id="@+id/feekback"
                android:layout_width="fill_parent"
                android:layout_height="47.0dip"
                android:background="@drawable/setting_item_selecter"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="6.0dip"
                android:text="@string/feekback_label"
                android:textColor="#ff222222"
                android:textSize="18.0sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="#ffcbcbcb" />

            <TextView
                android:id="@+id/version"
                android:layout_width="fill_parent"
                android:layout_height="47.0dip"
                android:background="@drawable/setting_item_selecter"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="6.0dip"
                android:text="@string/version_label"
                android:textColor="#ff222222"
                android:textSize="18.0sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="#ffcbcbcb" />
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5.0dip"
        android:background="@drawable/actionbar_shadow" />

</FrameLayout>